fix whitespace amount in footer [#127453657]

--- a/app/styles/components/_footer.scss
+++ b/app/styles/components/_footer.scss
@@ -1,5 +1,4 @@
 .c-footer {
-  min-height: 350px;
   margin-top: 30px;
   padding: 50px 0;
   text-align: center;
